# ticketing-service

./: .gitignore  Makefile  README.md  commit_lint.sh  manage.py  pyproject.toml  tox.ini
.github/actions/cache/: action.yml
.github/actions/python-setup/: action.yml
.github/workflows/: ci-cd.yml
tests/common/: test_ci.py
tests/config/: __init__.py  settings.py
ticketing_service/config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
