[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"


[tool.setuptools_scm]
version_scheme = "only-version"
local_scheme = "no-local-version"


[tool.setuptools.packages.find]
where = ["."]
include = ["ticketing_service", "ticketing_service.*", "bin"]


[project]
name = "ticketing-service"
dynamic = ["version"]
description = "A simple ticketing service application."
dependencies = [
    "django~=5.2.5",
    "django-ses==4.4.0",
    "djangorestframework==3.16.1",
    "django-cors-headers==4.9.0",
    "django-extensions==4.1",
    "django-filter==25.2",
    "gunicorn[gevent]~=23.0.0",
]
requires-python = ">=3.12"
authors = [
    { name = "Hansel Omondi", email = "omondihansel@students.uonbi.ac.ke" }
]

[project.optional-dependencies]
dev = [
    "ruff==0.12.10",
    "pyright==1.1.407",
    "django-stubs==5.0.4",
    "djangorestframework-stubs==3.15.1",
    "conventional-pre-commit==4.3.0",
]

test = [
    "coverage==7.11.3",
    "pytest==8.4.2",
    "pytest-django==4.11.1",
    "pytest-cov==6.2.1",
    "pytest-testmon==2.1.4",
    "pytest-xdist==3.8.0",
    "ruff==0.12.10",
    "pyright==1.1.407",
    "model-bakery==1.20.5",
    "conventional-pre-commit==4.3.0",
    "pre-commit==4.3.0",
]

ci = [
    "uv",
    "pip>=24.2",
    "tox-uv>=1.28.0",
    "setuptools_scm",
    "build",
    "git-changelog==2.5.3",
]


[project.urls]
Homepage = "https://github.com/hanselomondi/ticketing-service"


[tool.ruff]
exclude = [
    ".eggs",
    ".git",
    ".nox",
    ".pytype",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pycache__",
    "__pypackages__",
    "_build",
    "build",
    "dist",
    "docs",
    "venv",
    "ticketing_service/**/migrations/*",
    ".pytest_cache",
    "**grpc/**",
    "manage.py",
    "migrations",
    "env",
]
line-length = 79


[tool.ruff.lint]
extend-select = [
    # flake8-comprehensions
    "C4",

    # flake8-simplify
    "SIM",

    # flake8-type-checking
    "TCH",

    # flake8-debugger
    "T10",

    # flake8-print
    "T20",

    # flake8-bugbear
    # "B",

    # isort
    "I",

    # pycodestyle
    "E",

    # flake8-warnings
    "W",

    # Pyflakes
    "F",

    # missing docstrings
    "D1",

    # docstrings style (multi-line-summary-first-line)
    "D212",

    # type hints and checks
    "ANN",
]
fixable = ["ALL"]
per-file-ignores = {"tests/*.py" = ["ANN201", "ANN101", "ANN001"]}
pydocstyle = {convention = "google"}
mccabe = {max-complexity = 10}


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true


[tool.coverage.run]
branch = true


[tool.coverage.report]
fail_under = 100
show_missing = true
omit = [
    "docs/*", "tests/*", "ticketing_service/config/**",
    "ticketing_service/**/migrations/*", "*__init__.py",
    "ticketing_service/drf_spec_extensions/**"
]


[tool.pyright]
exclude = [
    "venv/**",
    "**/__pycache__",
    "docs/*",
]
